--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,3 +1,13 @@
 nav {
     padding: 0px 10px; 
+    background-color: rgb(29, 29, 29);
+}
+
+nav a{
+    transition: 0.3s;
+}
+
+
+nav a:hover {
+    color: rgb(233, 0, 78) !important;
 }
