--- a/src/css/home.css
+++ b/src/css/home.css
@@ -4,6 +4,7 @@ img, svg {
     vertical-align: top !important;
 }
 
+/* LOADING CSS */
 #loading-animation {
     text-align: center;
     padding: 250px 0px 1000px 0px;
@@ -12,7 +13,8 @@ img, svg {
 #loading-animation img{
     width: 250px;
 }
-  
+
+/* home css */
 .row {
     margin: 0;
 }
@@ -64,6 +66,14 @@ img, svg {
 }
 
 @media screen and (max-width: 1240px) {
+    
+    .home-banner {
+        font-size: 35px;
+        font-weight: 600;
+    }
+    .home-banner img {
+        width: 100%;
+    }
     .home-sub-banner {
         font-size: 45px;
         font-weight: 600;
