--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -4,10 +4,29 @@ nav {
 }
 
 nav a{
-    transition: 0.3s;
+    text-align: center;
+    transition: 0.2s;
+}
+
+.nav-item {
+    margin: 0px 15px;
 }
 
 
 nav a:hover {
     color: rgb(233, 0, 78) !important;
+}
+
+
+@media screen and (max-width: 575.5px) {
+
+    nav ul{
+        margin-top:5px;
+    }
+    
+
+    nav a:hover {
+        color: rgb(255, 255, 255) !important;
+        background-color: rgb(233, 0, 78) !important;
+    }
 }
