--- a/src/css/home.css
+++ b/src/css/home.css
@@ -31,14 +31,14 @@ img, svg {
 }
 
 .home-sub-banner {
-    padding: 110px 50px;
+    padding: 130px 50px;
     color: white;
     font-size: 55px;
     font-weight: 600;
 }
 
 .home-sub-banner img {
-    width: 90%;
+    width: 70%;
 }
 
 .text-right {
@@ -55,6 +55,10 @@ img, svg {
 
 .total-active {
     background-color: rgb(255, 207, 50);
+}
+
+.total-tested {
+    background-color: rgb(64, 92, 255);
 }
 
 .total-recovered {
@@ -75,20 +79,14 @@ img, svg {
         width: 100%;
     }
     .home-sub-banner {
-        font-size: 45px;
+        padding: 90px 50px;
+        font-size: 35px;
         font-weight: 600;
     }
     .home-sub-banner img {
-        width: 70%;
+        width: 60%;
     }
     .col-text {
         text-align: center !important;
-    }
-}
-
-@media screen and (max-width: 1240px) {
-    .home-sub-banner {
-        font-size: 35px;
-        font-weight: 600;
     }
 }
