--- a/src/css/home.css
+++ b/src/css/home.css
@@ -57,7 +57,7 @@ img, svg {
     background-color: rgb(255, 207, 50);
 }
 
-.total-tested {
+.total-vaccinated {
     background-color: rgb(64, 92, 255);
 }
 
