--- a/src/css/summary.css
+++ b/src/css/summary.css
@@ -28,6 +28,16 @@
     margin: 0px 0px 50px 0px;
 }
 
+.sub-title {
+    text-align: center;
+    font-weight: 800;
+    font-size: 35px;
+}
+
+.country-title {
+    padding-bottom: 15px;
+}
+
 #summary-details {
     padding: 0px 0px 50px 0px;
 }
@@ -73,7 +83,7 @@
 
 .div-table {
     border-radius: 0.5rem;
-    height: 500px;
+    height: 600px;
     margin-bottom: 50px;
     overflow-y: auto;
     box-shadow: 0 0 0.8rem rgb(0 0 0 / 10%);
@@ -81,6 +91,9 @@
 
 thead {
     font-size: 15px;
+    position: sticky;
+    top: 0;
+    background-color: white;
 }
 
 tbody {
@@ -96,4 +109,7 @@ tbody img {
 tbody span {
     font-size: 13px;
     font-weight: 600;
+}
+
+.header {
 }
